# LiteLLM-Companion

./: .env.x  .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  plan.md  prompt-agent-ai-cost-complet.md  pyproject.toml
.githooks/: commit-msg
.github/: dependabot.yml  labeler.yml  labels.yml
.vibe/: config.toml
chrome-extension/: background.js  manifest.json  options.html  options.js  popup.html  popup.js
docs/: architecture.md  consolidation-report.md  context.md  product-brief.md  roadmap-v1.md  stories.md
infra/: .env.example  deploy-loki.sh  docker-compose.override.yml  docker-compose.yml  loki-config.yaml  otel-collector-config.yaml
reviews/: docs-implementation-consistency-codex-2026-02-12.md  global-review-codex.md  grafana-data-reality-validation-codex-2026-02-12.md  independent-pr-review-codex-2026-02-12.md  live-grafana-runtime-eval-codex-2026-02-12.md  story-0-review.md  story-1-deep-dive-review.md  story-1-review.md  story-2-deep-dive-review.md  story-2-review.md  story-3-4-5-review.md  story-3-deep-dive-review.md  story-4-deep-dive-review.md  story-5-deep-dive-review.md  story-6-deep-dive-review.md  story-6-review.md  story-7-review.md  story-8-review.md  targeted-audit-perf-security-promql-install-codex-2026-02-12.md
service/: com.ai-cost-observer.plist  install-macos.sh  install-windows.cmd  install-windows.ps1  launcher.cmd  uninstall-macos.sh  uninstall-windows.cmd  uninstall-windows.ps1  verify-windows.cmd
tests/: conftest.py  test_active_window.py  test_browser_history.py  test_browser_history_checkpoint.py  test_config.py  (+24 more)
(+63 files in other folders)
