[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-cost-observer"
version = "1.0.0"
description = "Personal AI cost monitoring agent — tracks AI tool usage across desktop, browser, and CLI"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "psutil>=6.0",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28",
    "opentelemetry-exporter-otlp-proto-http>=1.28",
    "pyyaml>=6.0",
    "flask>=3.0",
    "cryptography>=42.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
macos = ["pyobjc-framework-Cocoa>=10.0"]
windows = ["pywin32>=306"]
dev = ["pytest>=8.0", "ruff>=0.5", "pytest-mock>=3.14", "pytest-cov>=6.0"]

[project.scripts]
ai-cost-observer = "ai_cost_observer.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_cost_observer"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["ai_cost_observer"]
omit = [
    "*/platform/macos.py",
    "*/platform/windows.py",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
